--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
         <div class="price">$149.99 <del>$169.99</del></div>
-        <button class="btn-add">
+        <button type="button" class="btn-add">
           <img src="images/icon-cart.svg" alt="cart icon" />
           Add to Cart
         </button>
