--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
     />
   </head>
   <body>
-    <div class="product-cart">
-      <div class="pro-img"></div>
-      <div class="pro-info">
-        <span class="category">Perfume</span>
-        <h6 class="name">Gabrielle Essence Eau De Parfum</h6>
-        <p class="des">
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div class="price">$149.99 <del>$169.99</del></div>
-        <button type="button" class="btn-add">
-          <img src="images/icon-cart.svg" alt="cart icon" />
-          Add to Cart
-        </button>
+    <main>
+      <div class="product-cart">
+        <div class="pro-img"></div>
+        <div class="pro-info">
+          <span class="category">Perfume</span>
+          <h6 class="name">Gabrielle Essence Eau De Parfum</h6>
+          <p class="des">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="price">$149.99 <del>$169.99</del></div>
+          <button type="button" class="btn-add">
+            <img src="images/icon-cart.svg" alt="cart icon" />
+            Add to Cart
+          </button>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
