--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This HTML & CSS-only challenge will be perfect for anyone starting to build responsive projects.">
     <title>Product preview card component</title>
     <!-- Css Main File -->
     <link rel="stylesheet" href="css/main.css" />
@@ -22,6 +23,7 @@
   </head>
   <body>
     <main>
+      <h1 class="d-none">Product preview card component</h1>
       <div class="product-cart">
         <div class="pro-img"></div>
         <div class="pro-info">
